Fixes in collapse button paddings

--- a/inst/app/www/biodosetools_style.css
+++ b/inst/app/www/biodosetools_style.css
@@ -62,9 +62,16 @@
   transform: translate3d(0, 0, 0)
 }
 
-.fa {
-  margin-right: 10px
+.fa.fa-minus {
+  margin-right: 4px;
+  margin-left: 4px;
 }
+
+.fa.fa-plus {
+  margin-right: 4px;
+  margin-left: 4px;
+}
+
 
 .fa.fa-gear.opt {
   margin-right: 0px
